
CHANGELOG

* 2014/07/21:

    - Revised. Working on Python 3.4.1, Flask 0.10.1, Frozen-Flask 0.11
      Markdown 2.4.1, Pygments 1.6, PyYAML 3.11.
      No changes needed.

* 2014/02/05:

    - Tested on IE6-IE11, Chrome, Firefox, Opera, Safari and multiple
      tablets and mobile phones.

    - Use line-height instead of vertical-align for the top bar.

* 2014/02/04:

    - Added pagination support as a template filter.

    - Non-explicit templates (includes, macros) start with a dash.

* 2014/02/03:

    - Added tags support.
