@@ -1,10 +1,0 @@
-
-{% extends '_base.html' %}
-
-{# Use the same template for archives, but filter posts in the tag. #}
-
-{% block content %}
-    {% set posts = posts_by_tag[tag] %}
-    {% include '_render-archive.html' %}
-{% endblock %}
-
